frontend-public/src/styles/general/pagination.css
.pagination {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.pagination button {
  border: none;
  background: none;
  padding: 0.5em 0.75em;
  cursor: pointer;
  border-radius: 0.375rem;
  font-size: 1em;
}

.pagination button.active {
  background: #87ceeb;
  color: #380401;
}

.pagination button:disabled {
  opacity: 0.5;
  cursor: default;
}

.dots {
  padding: 0 0.375em;
  font-weight: 700;
}
.btn {
  display: flex;
  align-items: center;
}
.arrow-pg {
  padding-inline: 0.5em;
}

